--- a/skatepoint.html
+++ b/skatepoint.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     
     <script type="text/javascript" src="JS/navigation.js"></script>
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/app.js"></script>
     <title>Skatepoint</title>
 	
 <style>
