--- a/skatepoint.html
+++ b/skatepoint.html
@@ -102,7 +102,7 @@
                 <h4>Über uns</h4>
                 <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
 				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
-                <button type="button" class="btn btn-primary unserbutton">MEHR</button>
+                <a href="#" class="btn button">MEHR</a>
             </div>
         </div> 
     </div>
@@ -181,7 +181,7 @@
                 <h4>Event Headline</h4>
                 <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
 				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
-                <button type="button" class="btn btn-primary unserbutton">MEHR</button>
+                <a href="#" class="btn button">MEHR</a>
             </div>
         </div>     
     </div>
@@ -228,7 +228,8 @@
                 <form>
                     <input type="text" value="Email" class="input">
                 </form>
-                <a href="#" class="button">Abonnieren</a>
+				<br>
+                <a href="#" class="btn button">Abonnieren</a>
             </div>
         </div>
     </div>
