--- a/skatepoint.html
+++ b/skatepoint.html
@@ -58,33 +58,7 @@
 </i>
     </div>
 <div style="clar: both;"></div>
-</div>
-<!--
-<section class="section banner" title="">
-    <div class="container hero">
-        <div class="top-right">Entdecke die besten Skate Spots in deiner Nähe</div>
-    </div>
-</section>     
-<section class="section about" id="sec1">
-    <div class="container">
-                <div class="left">
-            <div class="about-text">
-                <h4>Über uns</h4>
-                <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
-				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
-                <a href="#" class="button">MEHR</a>
-            </div>
-        </div> 
-        <div class=right>
-    
-                <img src="images/davide-ragusa-24118-unsplash.jpg" alt="blog-bild" class="about-img">
-
-        </div>
-    </div>
-
--->
-
-	
+</div>	
 <section class="section banner">
     <div class="container hero">
         <div class="top-right">Entdecke die besten Skate Spots in deiner Nähe</div>
@@ -109,8 +83,42 @@
 </section> 
 <section class="section spots" id="sec2" title="Spots">
     <div class="container">
-	   <div class="full">
-	       <div class="slides">
+	   <div class="full">  
+           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="images/IMG_0057.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>#1</h5>
+                        <p>...</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/IMG_0062.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>#2</h5>
+                        <p>...</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/IMG_0073.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>#3</h5>
+                        <p>...</p>
+                    </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+	      <!----
+           <div class="slides">
             <img class="slide" src="images/IMG_0057.png">
             <div class="slide-text">
                 <h4>#1</h4>
@@ -137,8 +145,11 @@
                 <button type="button" class="btn btn-primary unserbutton">MEHR</button>
            </div>
     </div>
+           
+        --->
  </div>
     </div>
+
     <!---
 		<img class="slides" src="images/IMG_0057.png" alt="Skateelemente in Wiesbaden">
 		<img class="slides" src="images/IMG_0062.jpg" alt="Skateelemente in Wiesbaden">
