--- a/skatepoint.html
+++ b/skatepoint.html
@@ -42,7 +42,7 @@
  
  <div id="navigation">
     
-    <div id="logo">Skatepoint</div>
+    <div><a href="#" id="logo">Skatepoint</a></div>
     <nav>
         <ul>
             <li><a href="#about" class="scrollNav" data-scrollTo="sec1">About</a></li>
@@ -208,7 +208,7 @@
             <div class="blog-vorschau">
                     <div class="blog-head">
                         <h2>Das Neuste</h2>
-                        <a href="#">Alle Beiträge</a>
+						<a href="#" class="btn button">Alle Beiträge</a>
                     </div>
                 <hr>
 				<div class="blog-eintrag">
