--- a/skatepoint.html
+++ b/skatepoint.html
@@ -190,7 +190,8 @@
     </div>
 </section>
     <!---FOOTER-------------------------------------------------->
-<div class="footer">
+
+    <div class="footer" style="padding: 5% 10%;">
     <div class="footer-row">
         <h5>Über uns</h5>
         <ul>
