--- a/skatepoint.html
+++ b/skatepoint.html
@@ -48,7 +48,7 @@
 <section class="section about" id="sec1" title="About">
     <div class="container">
         <div class=right>
-                <img src="images/davide-ragusa-24118-unsplash.jpg" alt="blog-bild" class="about-img">
+                <img src="images/davide-ragusa-24118-unsplash.jpg" alt="blog-bild" class="about-img" title="blog-bild">
         </div>
         <div class="left">
             <div class="about-text">
@@ -107,7 +107,7 @@
     <div class="container">
        <div class=left>
         <div class="Eventkalender">
-            <img src="images/calendar-alt-solid.svg" style="width: 32px;">
+            <img src="images/calendar-alt-solid.svg" alt="Kalender Symbol" title="Kalender Symbol" style="width: 32px;">
             <h4>Events</h4>
 			<div class="Event">
                 <img>
