--- a/skatepoint.html
+++ b/skatepoint.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="utf-8">
+<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="CSS/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/navigation.css" />
     <link rel="stylesheet" href="CSS/animate.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="JS/navigation.js"></script>
-    <script src="js/app.js"></script>
-    <script src="JS/bootstrap.js"></script>
-    <title>Skatepoint</title>
+    <link rel="stylesheet" href="css/style.css">
+	<title>Skatepoint</title>
 </head>
 <body>
  
@@ -61,37 +57,34 @@
     </div>
 </section> 
 <section class="section spots" id="sec2" title="Spots">
-    <div class="container">
-	   <div class="full">  
-           <div class="slides">
-            <img class="slide" src="images/IMG_0057.png">
-            <div class="slide-text">
-                <h4>#1</h4>
-                <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
-				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
-                <button type="button" class="btn button">MEHR</button>
-           </div>
-        </div>
-           <div class="slides">
-               <img class="slide" src="images/IMG_0062.jpg">
-            <div class="slide-text">
-                <h4>#2</h4>
-                <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
-				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
-                <button type="button" class="btn button">MEHR</button>
-           </div> 
-        </div>
-        <div class="slides">
-                <img class="slide" src="images/IMG_0073.jpg" alt="Skateelemente in Wiesbaden">
-            <div class="slide-text">
-                <h4>#3</h4>
-                <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
-				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
-                <button type="button" class="btn button">MEHR</button>
-           </div>
-    </div>
- </div>
-    </div>
+			
+			
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+					  <img class="d-block w-100" src="images/IMG_0057.jpg" alt="First slide">
+					</div>
+					<div class="carousel-item">
+					  <img class="d-block w-100" src="images/IMG_0057.jpg" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+					  <img class="d-block w-100" src="images/IMG_0057.jpg" alt="Third slide">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
        
   
     <!---
@@ -230,6 +223,12 @@
 </div>
     <hr>
     <div class="copyright">&copy;2018 | <a href="skatepoint.html" title="SKATEPOINT">SKATEPOINT</a></div>
+	
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="JS/navigation.js"></script> 
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
 
