--- a/skatepoint.html
+++ b/skatepoint.html
@@ -177,7 +177,7 @@
                 <h2>Newsletter</h2>
                 <h6>Verpasse keine Neuigkeiten mehr!</h6>
                 <form>
-                    <input type="text" value="Email" class="input">
+                    <input type="text" placeholder="max.musterm@bums.deinemudda" class="input">
                 </form>
 				<br>
                 <a href="#" class="btn button" title="Abonnieren">Abonnieren</a>
