--- a/skatepoint.html
+++ b/skatepoint.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/navigation.css" />
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="css/style.css">
-	<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon_2.ico">
+	<!-- <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
@@ -26,7 +27,7 @@
 <link rel="manifest" href="images/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#ffffff">-->
 	<title>Skatepoint</title>
 </head>
 <body>
