--- a/skatepoint.html
+++ b/skatepoint.html
@@ -11,23 +11,6 @@
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon_2.ico">
-	<!-- <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-<link rel="manifest" href="images/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">-->
 	<title>Skatepoint</title>
 </head>
 <body>
@@ -67,8 +50,8 @@
         <div class="left">
             <div class="about-text">
                 <h4>Über uns</h4>
-                <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
-				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
+                <p>Wir möchten mit unserem Service eine Möglichkeit schaffen aus dem Alltag und der Routine auszubrechen und Neues zu entdecken!</p>
+				<p>Skater, Freizeitsportler, Familien und auch Unternehmen aus der Branche können sich auf dieser Website wiederfinden und zusammen als Community agieren, es funktioniert indem...</p>
                 <a href="#" class="btn button">MEHR</a>
             </div>
         </div> 
@@ -119,7 +102,7 @@
        <div class=left>
         <div class="Eventkalender">
             <img src="images/calendar-alt-solid.svg" alt="Kalender Symbol" title="Kalender Symbol" style="width: 32px;">
-            <h4>Events</h4>
+            <h4>Event Highlights</h4>
 			<div class="Event">
                 <img>
                 <h5>Weihnachtsskate</h5>
@@ -145,8 +128,8 @@
         <div class="right">
             <div class="Event-text">
                 <h4>Event Headline</h4>
-                <p>Du möchtest wissen wo etwas los ist? Treffe die Stars der Szene bei exklusiven Tipps und skate mit ihnen!</p>
-				<p>Zielgruppe 3 die Möglichkeit erwähnen das Eventkalender gekauft werden kann, sodass man direkt auf der Startseite steht und nicht auf Unterseite Eventkalender</p>
+                <p>Du möchtest wissen wo etwas los ist? Treffe die Szene, skate mit deinen Idolen!</p>
+				<p>Informationen über zukünftige Events, und wie Du mit deinem Event in unseren Highlights gelistet wirst erfährst Du unter MEHR.</p>
                 <a href="#" class="btn button">MEHR</a>
             </div>
         </div>     
@@ -170,19 +153,19 @@
                     <img>
                     <p>23.11.2018</p>
                     <h5><a href="#" title="Fun: Fail Videos des Monats">Fun: Fail Videos des Monats</a></h5>
-					<h6>Vorspann</h6>
+					<h6>Einmal im Monat präsentieren wir Euch eure eingesendeten Clips...</h6>
                 </div>
                 <div class="blog-eintrag">
                     <img>
                     <p>17.11.2018</p>
                     <h5><a href="#" title="Style: Skateschuhe für den kleinen Geldbeutel">Style: Skateschuhe für den kleinen Geldbeutel</a></h5>
-					<h6>Vorspann</h6>
+					<h6>Jeder kennt es, die Schuhe sind schnell kaputt und abgenutzt...</h6>
                 </div>
                 <div class="blog-eintrag">
                     <img>
                     <p>16.11.2018</p>
                     <h5><a href="#" title="Tutorial: Wie ich einen Ollie lerne">Tutorial: Wie ich einen "Ollie" lerne</a></h5>
-					<h6>Vorspann</h6>
+					<h6>In der heutigen How-To Reihe ein Klassiker, der Ollie...</h6>
                 </div>
         </div>
         </div>        
