--- a/skatepoint.html
+++ b/skatepoint.html
@@ -163,7 +163,7 @@
     <div class="container">
         <div class=left>
     
-                <img src="images/IMG_0118-2.jpg" alt="Schuhe baumeln an einem Ast - Shoefiti" class="block-img" title="Schuhe baumeln an einem Ast - Shoefiti">
+                <img src="images/IMG_0118.jpg" alt="Schuhe baumeln an einem Ast - Shoefiti" class="block-img" title="Schuhe baumeln an einem Ast - Shoefiti">
 
         </div>
         <div class="right">
