--- a/skatepoint.html
+++ b/skatepoint.html
@@ -57,7 +57,7 @@
         </div> 
     </div>
 </section> 
-<section class="section spots" id="sec2" title="Spots">
+<section class="section spots" id="sec2" title="Spots" style="padding: 0px;">
 			
 			
 			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -69,7 +69,7 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 					  <img class="d-block w-100" src="images/IMG_0062.jpg" alt="First slide">
-                               <div class="card" style="width: 18rem;  margin-top: -100px; margin-left: 100px;">
+                               <div class="card" style="width: 18rem;  margin-top: -200px; margin-left: 100px;" width: auto;>
                           <div class="card-body">
                             <h6 class="card-subtitle mb-2 text-muted">Wiesbaden</h6>
                             <h5 class="card-title">Schlachthof</h5>
@@ -80,7 +80,7 @@
 					</div>
 					<div class="carousel-item">
 					  <img class="d-block w-100" src="images/IMG_0095.jpg" alt="Second slide">
-                        <div class="card" style="width: 18rem;  margin-top: -100px; margin-left: 100px;">
+                        <div class="card" style="width: 18rem;  margin-top: -200px; margin-left: 100px;">
                           <div class="card-body">
                             <h6 class="card-subtitle mb-2 text-muted">Wiesbaden</h6>
                             <h5 class="card-title">Skatehalle</h5>
@@ -91,7 +91,7 @@
 					</div>
 					<div class="carousel-item">
 					  <img class="d-block w-100" src="images/IMG_0131.jpg" alt="Third slide">
-                               <div class="card" style="width: 18rem;  margin-top: -100px; margin-left: 100px;">
+                               <div class="card" style="width: 18rem;  margin-top: -200px; margin-left: 100px;">
                           <div class="card-body">
                             <h6 class="card-subtitle mb-2 text-muted">Hofheim</h6>
                             <h5 class="card-title">Skatepark</h5>
