--- a/skatepoint.html
+++ b/skatepoint.html
@@ -39,7 +39,7 @@
     
 <section class="section banner">
     <div class="container hero">
-        <div class="top-right">Entdecke die besten Skate Spots in deiner Nähe</div>
+        <div class="top-right"></div>
     </div>
 </section>    
 <section class="section about" id="sec1" title="About">
@@ -69,7 +69,7 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 					  <img class="d-block w-100" src="images/IMG_0062.jpg" alt="First slide">
-                               <div class="card" style="width: 18rem;  margin-top: -200px; margin-left: 100px;" width: auto;>
+                               <div class="card" style="width: 18rem;">
                           <div class="card-body">
                             <h6 class="card-subtitle mb-2 text-muted">Wiesbaden</h6>
                             <h5 class="card-title">Schlachthof</h5>
@@ -80,7 +80,7 @@
 					</div>
 					<div class="carousel-item">
 					  <img class="d-block w-100" src="images/IMG_0095.jpg" alt="Second slide">
-                        <div class="card" style="width: 18rem;  margin-top: -200px; margin-left: 100px;">
+                        <div class="card" style="width: 18rem;">
                           <div class="card-body">
                             <h6 class="card-subtitle mb-2 text-muted">Wiesbaden</h6>
                             <h5 class="card-title">Skatehalle</h5>
@@ -91,7 +91,7 @@
 					</div>
 					<div class="carousel-item">
 					  <img class="d-block w-100" src="images/IMG_0131.jpg" alt="Third slide">
-                               <div class="card" style="width: 18rem;  margin-top: -200px; margin-left: 100px;">
+                             <div class="card" style="width: 18rem;">
                           <div class="card-body">
                             <h6 class="card-subtitle mb-2 text-muted">Hofheim</h6>
                             <h5 class="card-title">Skatepark</h5>
@@ -246,7 +246,6 @@
         </ul>
     </div>
 </div>
-    <hr>
     <div class="copyright">&copy;2018 | <a href="skatepoint.html" title="SKATEPOINT">SKATEPOINT</a></div>
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
