--- a/skatepoint.html
+++ b/skatepoint.html
@@ -86,6 +86,12 @@
                             <h5 class="card-title">Skatehalle</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn button">MEHR</a>
+                            <p>share</p>
+                            <div style="align-self: flex-end">
+                                <ul>
+                                    <li><a href="#">Facebook</a></li>
+                                </ul>  
+                            </div>
                           </div>
                         </div>
 					</div>
@@ -151,7 +157,7 @@
     </div>       
         <div class="right">
             <div class="Event-text">
-                <h4>Event Headline</h4>
+                <h4>Sei dabei</h4>
                 <p>Du möchtest wissen wo etwas los ist? Treffe die Szene, skate mit deinen Idolen!</p>
 				<p>Informationen über zukünftige Events, und wie Du mit deinem Event in unseren Highlights gelistet wirst erfährst Du unter MEHR.</p>
                 <a href="#" class="btn button">MEHR</a>
@@ -202,7 +208,7 @@
                 <h2>Newsletter</h2>
                 <h6>Verpasse keine Neuigkeiten mehr!</h6>
                 <form>
-                    <input type="text" placeholder="max.musterm@bums.deinemudda" class="input">
+                    <input type="text" placeholder="Email" class="input">
                 </form>
 				<br>
                 <a href="#" class="btn button" title="Abonnieren">Abonnieren</a>
