--- a/skatepoint.html
+++ b/skatepoint.html
@@ -39,15 +39,16 @@
     
 <section class="section banner">
     <div class="container hero" style="display: flex;
-    justify-content: flex-end;
-}">
-        <div class="top-right">SKATE <br> SPOTS</div>
+    flex-direction: column;">
+        <div class="top-right">Skate Spots in deiner Nähe</div>
+        <a href="#" class="btn button">MEHR</a>
+        
     </div>
 </section>    
 <section class="section about" id="sec1" title="About">
     <div class="container">
         <div class=right>
-                <img src="images/WhatsApp%20Image%202018-11-17%20at%2023.03.31.jpeg" alt="blog-bild" class="about-img" title="blog-bild">
+                <img src="images/davide-ragusa-24118-unsplash.jpg" alt="blog-bild" class="about-img" title="blog-bild">
         </div>
         <div class="left">
             <div class="about-text">
