--- a/skatepoint.html
+++ b/skatepoint.html
@@ -38,11 +38,8 @@
 </div>
     
 <section class="section banner">
-    <div class="container hero" style="display: flex;
-    flex-direction: column;">
-        <div class="top-right">Skate Spots in deiner Nähe</div>
-        <a href="#" class="btn button">MEHR</a>
-        
+    <div class="container hero">
+        <img src="images/tape.png" alt="tape">
     </div>
 </section>    
 <section class="section about" id="sec1" title="About">
